# PluginPoC

./: .gitignore  CMakeLists.txt  README.md
.config/: .clang-tidy.config  .cppcheck.config
.github/workflows/: build-and-test-project.yml  build-project.yml
Data-Provider-Battery/: CMakeLists.txt
Data-Provider-Battery/app/: main.cpp
Data-Provider-Disk/: CMakeLists.txt
Data-Provider-Disk/app/: main.cpp
Deamon/: CMakeLists.txt
Deamon/app/: main.cpp
Deamon/src/: foo.cpp
Docker/: Dockerfile_ubuntu_devenv
Health-Monitor/: CMakeLists.txt
Health-Monitor/app/: main.cpp
Health-Monitor/include/: foo.hpp
cmake/: clang-tidy.cmake  cppcheck.cmake  project-settings.cmake
common/: CMakeLists.txt  settings.cmake
common/include/: common-foo.hpp
common/src/: common-foo.cpp
daemon/: CMakeLists.txt
daemon/app/: main.cpp
data-provider-battery/: CMakeLists.txt
data-provider-battery/app/: main.cpp
data-provider-battery/src/: foo.cpp
data-provider-disk/: CMakeLists.txt
data-provider-disk/app/: main.cpp
deamon/: CMakeLists.txt
deamon/app/: main.cpp
docker/: Dockerfile-ubuntu-devenv
health-monitor/: CMakeLists.txt
health-monitor/app/: main.cpp
health-monitor/include/: foo.hpp
scripts/devenv/: devenv-install-devtools-ubuntu.sh  devenv-install-docker-ubuntu.sh  devenv-install-ubuntu.sh  devenv-setup-aws-env.sh  devenv_install_ubuntu.sh
